Fixing a NMH crash on Windows

A recent CL added a Mojo dependency to our host binaries.  This caused a
crash on Linux/MacOS (crbug.com/875462) which was recently fixed. I then
saw a crash in the NMH on Windows when starting the CRD App.  This is due
to the same root problem but in our Me2Me NMH binary this time.  I've
fixed the init problem and verified I can set up a host again.

I've also tested It2Me on Windows and it works fine.

BUG=875953

Change-Id: Ia22e45aa2d9ed0b1e27595e1cee1038676278b70
Reviewed-on: https://chromium-review.googlesource.com/1181928
Reviewed-by: Gary Kacmarcik <garykac@chromium.org>
Commit-Queue: Joe Downing <joedow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584569}