remoting/host/setup/me2me_native_messaging_host_main.cc
@@ -20,6 +20,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/task/task_scheduler/task_scheduler.h"
 #include "base/threading/thread.h"
 #include "build/build_config.h"
+#include "mojo/core/embedder/embedder.h"
 #include "net/url_request/url_fetcher.h"
 #include "remoting/base/auto_thread_task_runner.h"
 #include "remoting/base/breakpad.h"
@@ -89,6 +90,8 @@ int Me2MeNativeMessagingHostMain(int argc, char** argv) {
 #endif  // defined(REMOTING_ENABLE_BREAKPAD)
 
   base::TaskScheduler::CreateAndStartWithDefaultParams("Me2Me");
+
+  mojo::core::Init();
 
   // An IO thread is needed for the pairing registry and URL context getter.
   base::Thread io_thread("io_thread");
